--- a/css/375.scss
+++ b/css/375.scss
@@ -78,70 +78,62 @@
       }
     }
     .main__container {
-      height: 194.667vw;
+      height: 213.333vw;
       .main-title {
-        top: 42.667vw;
-        font-size: 6.933vw;
-        line-height: 9.067vw;
-        width: 100%;
+        top: 86.667vw;
+
+        font-size: 8vw;
+        line-height: 10.667vw;
+        width: min-content;
         bottom: auto;
       }
       .main-subtitle {
         bottom: auto;
-        top: 105.867vw;
+        top: 110.867vw;
         width: 100%;
         left: 0;
-        font-size: 5.333vw;
-        line-height: 7.467vw;
+        font-size: 4.8vw;
+        line-height: 6.933vw;
         a {
           border-radius: 1.805vw;
           padding: 0 1.333vw;
           height: 8.001vw;
         }
       }
+      .main-inbox {
+        bottom: auto;
+        top: 45.333vw;
+        width: 78.4vw;
+        padding: 3.467vw 4.8vw 9.333vw 4.8vw;
+        p {
+          font-size: 3.733vw;
+          line-height: 5.333vw;
+        }
+      }
       .populacion-container {
         bottom: auto;
         top: 148.533vw;
         left: 0;
-
         .main-populacion {
-          flex-direction: column-reverse;
-          font-size: 9.6vw;
-          line-height: 13.333vw;
-          gap: 1.067vw;
+          font-size: 9.067vw;
+          line-height: 11.733vw;
+          gap: 3.733vw;
           span {
-            font-size: 4.267vw;
+            font-size: 3.733vw;
             line-height: 6.4vw;
-            width: 21.867vw;
             height: 9.067vw;
             border-radius: 2.133vw;
             padding: 0 3.468vw;
           }
         }
         strong {
-          margin: 2.933vw 0 0 0;
-          font-size: 4.267vw;
-          line-height: 6.4vw;
+          margin: 3.933vw 0 0 0;
+          font-size: 3.733vw;
+          line-height: 5.333vw;
           width: 100%;
         }
         .main-button {
-          bottom: auto;
-          top: -16.8vw;
-          margin: 0;
-          width: 33.333vw;
-          height: 33.333vw;
-          font-size: 3.733vw;
-          line-height: 5.6vw;
-          animation: main-button375 3s linear infinite;
-          img {
-            bottom: 4.534vw;
-            width: 4.8vw;
-          }
-          &:hover {
-            width: 38.667vw;
-            height: 38.667vw;
-            transform: translate(2.667vw, -2.667vw);
-          }
+          display: none;
         }
       }
     }
@@ -149,11 +141,10 @@
   .beginning {
     width: 100%;
     height: auto;
-    margin-top: -72vw;
     z-index: 0;
-
     .water-blur {
-      top: -4%;
+      display: none;
+      // top: -4%;
     }
     .bubbles1 {
       width: 13.066vw;
@@ -168,34 +159,46 @@
       width: 12.534vw;
     }
     .beginning-wrapper {
-      height: 309.333vw;
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 65.333vw;
-
-        background-image: url(../img/beginning/blur.png);
-        background-size: 100%;
+      height: auto;
+      .begining-blur {
+        height: 81.333vw;
+        object-fit: cover;
       }
+
       .beginning-container {
-        height: auto;
+        height: 256.8vw;
+        display: block;
         .beginning-background {
-          top: 0;
-          bottom: auto;
+          top: auto;
+          bottom: 0;
         }
       }
     }
     .beginning__container {
       height: auto;
-
-      transform: translateY(50%);
+      transform: translateY(0);
+      align-items: flex-start;
+      &::before {
+        left: 3.6vw;
+        top: 60vw;
+        height: 2.133vw;
+        width: 2.133vw;
+        border-left: 0.26vw solid #ffffff;
+        border-bottom: 0.26vw solid #ffffff;
+      }
+      &::after {
+        right: 3.6vw;
+        top: 60vw;
+        height: 2.133vw;
+        width: 2.133vw;
+        border-left: 0.26vw solid #ffffff;
+        border-bottom: 0.26vw solid #ffffff;
+      }
       .beginning__slider {
         width: 89.867vw;
         height: 89.867vw;
-        transform: rotate(180deg) translateY(-98.133vw);
+        transform: rotate(180deg) translateY(0);
+        margin: 5.333vw 0 0 0;
         &::before {
           right: 4vw;
           left: auto;
@@ -253,39 +256,39 @@
         }
       }
       .beginning__right-block {
-        position: absolute;
+        position: relative;
         right: auto;
         left: 0;
-        top: 54.133vw;
+        top: 0;
         width: 100%;
         h2 {
           position: relative;
           font-size: 10.133vw;
-          line-height: 15.467vw;
+          line-height: 12.8vw;
           gap: 4.001vw;
-
+          flex-direction: column;
           span {
-            position: absolute;
+            position: relative;
             right: 0;
             top: 0;
-            margin: 4.533vw 0 0 0;
+            margin: 0;
             padding: 0 3.2vw;
-            font-size: 4.267vw;
+            font-size: 3.733vw;
             line-height: 6.4vw;
             border-radius: 2.133vw;
-            width: auto;
+            width: 37.333vw;
             height: 9.333vw;
           }
         }
         strong {
-          top: 316%;
+          top: 375%;
           margin: 0;
-          font-size: 5.333vw;
-          line-height: 8vw;
+          font-size: 4vw;
+          line-height: 6.4vw;
           width: 100%;
           letter-spacing: 0.025em;
           span {
-            margin: 2.135vw 0 0 0;
+            margin: 6.133vw 0 0 0;
           }
         }
       }
@@ -360,14 +363,15 @@
       }
       .ridht-block {
         flex-direction: column;
-        margin: 8.533vw 0 0 0;
+        margin: 24vw 0 0 0;
         align-items: flex-end;
+        width: 41.867vw;
         .button-container {
           gap: 2.668vw;
-          transform: translateX(-9.067vw);
+          margin: 0 auto 0 0;
           .button {
-            width: 17.599vw;
-            height: 7.466vw;
+            width: 15.733vw;
+            height: 6.667vw;
             border: 1px solid #ffffff;
             border-radius: 1.75vw;
             &.active {
@@ -382,29 +386,27 @@
           }
         }
         span {
-          margin: 18.399vw 0 0 0;
-          transform: translateX(-2.667vw);
-          font-size: 6.4vw;
-          line-height: 9.067vw;
+          margin: 9.333vw auto 0 0;
+          font-size: 5.867vw;
+          line-height: 7.467vw;
         }
         strong {
-          margin: 0 14.133vw 0 0;
-          font-size: 5.333vw;
-          line-height: 8vw;
-          letter-spacing: -0.03em;
+          margin: 2.133vw auto 0 0;
+          font-size: 4.267vw;
+          line-height: 5.067vw;
+          letter-spacing: -0.02em;
         }
         p {
-          margin: 3.467vw 0 0 0;
-          font-size: 4.267vw;
-          line-height: 6.4vw;
-          width: 47.2vw;
+          margin: 5.067vw auto 0 0;
+          font-size: 4vw;
+          line-height: 5.333vw;
         }
         .social {
-          margin: 6.932vw 22.667vw 0vw 0;
+          margin: 5.867vw auto 0 0;
           gap: 3.2vw;
           a {
-            width: 10.666vw;
-            height: 10.666vw;
+            width: 9.6vw;
+            height: 9.6vw;
           }
         }
       }
@@ -454,12 +456,13 @@
     background-size: cover;
     background-position: center -6.667vw;
     background-repeat: no-repeat;
+    padding: 0 0 29.333vw 0;
     #waterway-bg {
       z-index: 1;
       display: none;
     }
     #waterway-blur {
-      z-index: 999;
+      z-index: 1;
       width: 100%;
       height: 75.733vw;
       opacity: 1 !important;
@@ -467,6 +470,25 @@
     }
     .container {
       flex-direction: column;
+      &::before {
+        content: "INK the Metaverse";
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 3.733vw;
+        line-height: 6.4vw;
+        letter-spacing: -0.02em;
+        z-index: 2;
+        color: #ffffff;
+        display: flex;
+        padding: 0 3.733vw;
+        border-radius: 2.133vw;
+        height: 9.6vw;
+        border-left: 1px solid #ff66c4;
+        border-right: 1px solid #ff66c4;
+        align-items: center;
+        margin: 29.333vw 0 0 auto;
+      }
     }
     .waterway-tabs {
       display: none;
@@ -476,7 +498,7 @@
       height: auto;
       position: relative;
       z-index: 9;
-      padding: 38.667vw 0 0 0;
+
       &::before,
       &::after {
         content: "";
@@ -486,61 +508,90 @@
         background-position: center center;
         z-index: -1;
       }
-      &::before {
-        width: 72vw;
-        height: 72vw;
-        background-image: url(/img/waterway/bubble.png);
-        background-size: 90%;
-        top: 2.933vw;
-        right: -5.867vw;
-        animation: 4s bubbles-waterway ease-in-out infinite;
-      }
-      &::after {
-        width: 53.333vw;
-        height: 53.333vw;
-        background-image: url(/img/waterway/axolots.gif);
-        background-size: 53.333vw auto;
-        top: 14.667vw;
-        right: 3.467vw;
-        animation: 4s bubbles-waterway ease-in-out infinite;
-      }
+
       #waterway-text-1,
       #waterway-text-2,
       #waterway-text-3,
       #waterway-text-4 {
+        position: relative;
+        padding: 41.6vw 0 0 0;
         height: auto;
-        margin: 0 0 28vw 0;
-        .hidden-title{
-          display: flex;
+        margin: 0 0 12vw 0;
+        &::before {
+          font-family: "Wild World";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 8.533vw;
+          line-height: 15.467vw;
+          color: #ffffff;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 34.667vw;
+          height: 37.333vw;
+
+          background-size: 100%;
+          top: 7.2vw;
+          right: auto;
+          left: 0;
+          animation: 4s bubbles-waterway ease-in-out infinite;
         }
       }
-      .hidden-title {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        font-size: 10.133vw;
-        line-height: calc(58 / 38);
-        font-family: "Wild World";
-        font-weight: 500;
-        margin: 0 0 9.333vw 0;
-        .waterway-maintitle {
-          font-size: 4.267vw;
-          border-radius: 2.133vw;
-          padding: 1.333vw 3.2vw;
+      #waterway-text-1 {
+        &::before {
+          content: "Season 1";
+        }
+        &::after {
+          background-image: url(/img/waterway/bubble-mobile.png);
         }
       }
+      #waterway-text-2 {
+        &::before {
+          content: "Expression";
+        }
+        &::after {
+          background-image: url(/img/waterway/bubble-mobile2.png);
+        }
+      }
+      #waterway-text-3 {
+        &::before {
+          content: "Purpose";
+        }
+        &::after {
+          background-image: url(/img/waterway/bubble-mobile3.png);
+        }
+      }
+      #waterway-text-4 {
+        &::before {
+          content: "Forging";
+        }
+        &::after {
+          background-image: url(/img/waterway/bubble-mobile4.png);
+        }
+      }
+
       .waterway-title {
-        font-size: 9.067vw;
-        line-height: calc(44 / 34);
+        font-size: 5.333vw;
+        line-height: 7.467vw;
+        margin: 1.067vw 0 6.933vw 0;
+        br {
+          display: block;
+        }
       }
       ul {
+        gap: 3.2vw;
         li {
-          font-size: 4.8vw;
-          line-height: calc(28 / 18);
-          padding: 0 0 0 7.8vw;
-          margin-top: 1.333vw;
+          gap: 3.2vw;
+          font-size: 4vw;
+          line-height: 6.4vw;
           &::before {
-            left: 3.4vw;
+            font-size: 2.667vw;
+            line-height: 5.6vw;
+          }
+          a {
+            font-size: 4vw;
+            line-height: 6.4vw;
           }
         }
       }
@@ -570,8 +621,8 @@
 
   footer {
     .faq {
-      height: 282.667vw;
-      margin: 0 0 48vw 0;
+      height: auto;
+padding: 0 0 32vw 0;
       .main-title {
         font-size: 12.8vw;
       }
@@ -587,7 +638,8 @@
   }
 
   .accordion-title {
-    font-size: 5.867vw;
+    font-size: 3.733vw;
+    line-height: 4.8vw;
     padding: 5.333vw 5.333vw 5.333vw 10.667vw;
     &::before {
       width: 0.533vw;
@@ -600,6 +652,7 @@
   }
 
   footer {
+
     .footer-light {
       width: 175vw;
       left: -28vw;
@@ -609,15 +662,15 @@
     .faq {
       .main-title {
         font-size: 10.133vw;
-        line-height: calc(58 / 38);
+        line-height: 15.467vw;
         margin: 0 0 2.667vw 0;
       }
     }
   }
 
   .accordion-title {
-    font-size: 5.333vw;
-    line-height: calc(30 / 20);
+    font-size: 4.267vw;
+    line-height: 6.4vw;
     padding: 4.533vw 5.333vw 4.533vw 10.133vw;
     &::before {
       width: 0.533vw;
@@ -631,7 +684,8 @@
     }
   }
   .accordion-content {
-    font-size: 4.8vw;
+    font-size: 4.267vw;
+    line-height: 6.4vw;
   }
 
   .footer {
@@ -640,90 +694,116 @@
       height: auto;
     }
     .f-main-title {
-      font-size: 6.667vw;
-      line-height: 1;
+      font-size: 8.533vw;
+      line-height: 12.8vw;
     }
     .join-bot {
       margin: 0 0 1.333vw 0;
       > span {
-        font-size: 8.8vw;
-        line-height: calc(49 / 33);
+        font-size: 10.133vw;
+        line-height: 12.267vw;
+      }
+      > img{
+        width: 29.067vw;
+        margin: 0 0 0 8vw;
       }
     }
     .socials {
       flex-direction: column;
-      margin: 0 0 9.6vw 0;
+      margin: 0 0 13vw 0;
       gap: 4vw;
       .btn {
         font-size: 4.267vw;
         gap: 3.2vw;
         padding: 4vw 5.867vw;
+        border-radius: 2.133vw;
+        &::before,
+        &::after{
+          width: 4.267vw;
+        }
         img {
           width: 5.333vw;
         }
       }
     }
-    .terms {
-      gap: 8vw;
-      margin: 0 0 6.933vw 0;
-      a {
-        font-size: 3.2vw;
-        gap: 3.733vw;
-        .btn {
-          font-size: 4.8vw;
-          gap: 3.2vw;
-          padding: 5.067vw 5.867vw;
-          img {
-            margin: 0;
-            width: 5.333vw;
+
+
+    .footer__block-wrapper{
+      flex-direction: column;
+      align-items: center;
+      .terms {
+        gap: 8vw;
+        margin: 0 0 6.933vw 0;
+        a {
+          font-size: 3.2vw;
+          gap: 3.733vw;
+          .btn {
+            font-size: 4.8vw;
+            gap: 3.2vw;
+            padding: 5.067vw 5.867vw;
+            img {
+              margin: 0;
+              width: 5.333vw;
+            }
+            &::before,
+            &::after {
+              width: 4.267vw;
+            }
+            &::before {
+              left: 0;
+            }
+            &::after {
+              right: 0;
+            }
+            > span {
+              &:nth-child(1) {
+                display: none;
+              }
+            }
           }
-          &::before,
-          &::after {
-            width: 4.267vw;
+        }
+        .terms {
+          gap: 10.667vw;
+          a {
+            font-size: 3.2vw;
+            line-height: 4vw;
           }
-          &::before {
-            left: 0;
-          }
-          &::after {
-            right: 0;
-          }
-          > span {
-            &:nth-child(1) {
-              display: none;
+        }
+        .powered {
+          a {
+            img {
+              width: 45.867vw;
             }
           }
         }
       }
-      .terms {
-        gap: 10.667vw;
-        a {
-          font-size: 3.733vw;
-        }
-      }
-      .powered {
-        a {
-          img {
-            width: 34.667vw;
-          }
-        }
-      }
     }
+
+
+
+    
   }
 
   #mint {
     width: 100%;
-    height: 255.733vw;
+    height: 229.333vw;
+    .main-text__container {
+      margin: 85vw 0 0 0;
+      width: 100%;
+      gap: 4vw;
+    }
     img.bg {
-      top: 0;
-      left: -3.25vw;
-      width: 125vw;
+      top: 8.533vw;
+      left: 0;
+      width: 252vw;
     }
     .anime-circle {
-      top: auto;
-      bottom: 53.5vw;
-      left: -20.75vw;
+      top: 42.667vw;
+      bottom: auto;
+      left: -13.75vw;
+      width: 91.2vw;
+      height: 108.533vw;
 
-      width: 140vw;
       .wrapper-circle {
         .character {
           width: 98.5vw;
@@ -733,26 +813,31 @@
     .container {
       height: 100%;
       margin-top: auto;
+      display: block;
+      .btn {
+        position: relative;
+        font-size: 4.267vw;
+        line-height: 4.8vw;
+        width: 48vw;
+        margin: 10.667vw 0 0 0;
+        height: 14.4vw;
+        border-radius: 2.133vw;
+        &::before,
+        &::after {
+          width: 8.267vw;
+        }
+      }
     }
-    .btn {
-      position: absolute;
-      bottom: 28.267vw;
-      left: 50%;
-      transform: translate(-50%, 0);
-      font-size: 4.8vw;
-      line-height: calc(26.68 / 18);
-      padding: 4.8vw 6.5vw;
-      width: 58.667vw;
-    }
+
     .main-title {
       font-size: 10.133vw;
-      line-height: calc(58 / 38);
-      margin: 20.533vw 0 7.2vw 0;
+      line-height: 12.8vw;
+      margin: 25.533vw 0 7.2vw 0;
     }
     .main-text {
-      font-size: 5.333vw;
-      line-height: calc(30 / 20);
-      letter-spacing: -0.133vw;
+      font-size: 4vw;
+      line-height: 6.4vw;
+      letter-spacing: -0.02em;
     }
   }
 
