--- a/css/375.scss
+++ b/css/375.scss
@@ -452,7 +452,7 @@
   #waterway {
     height: auto;
     width: 100vw;
-    background-image: url("/img/waterway/waterway-bg-mob.png");
+    background-image: url("../img/waterway/waterway-bg-mob.png");
     background-size: cover;
     background-position: center -6.667vw;
     background-repeat: no-repeat;
@@ -543,7 +543,7 @@
           content: "Season 1";
         }
         &::after {
-          background-image: url(/img/waterway/bubble-mobile.png);
+          background-image: url(../img/waterway/bubble-mobile.png);
         }
       }
       #waterway-text-2 {
@@ -551,7 +551,7 @@
           content: "Expression";
         }
         &::after {
-          background-image: url(/img/waterway/bubble-mobile2.png);
+          background-image: url(../img/waterway/bubble-mobile2.png);
         }
       }
       #waterway-text-3 {
@@ -559,7 +559,7 @@
           content: "Purpose";
         }
         &::after {
-          background-image: url(/img/waterway/bubble-mobile3.png);
+          background-image: url(../img/waterway/bubble-mobile3.png);
         }
       }
       #waterway-text-4 {
@@ -567,7 +567,7 @@
           content: "Forging";
         }
         &::after {
-          background-image: url(/img/waterway/bubble-mobile4.png);
+          background-image: url(../img/waterway/bubble-mobile4.png);
         }
       }
 
